REL-114997 - Added missing Post-Build Events for copying dlls to lib\UnitTests directory

--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration/kCura.IntegrationPoints.Synchronizers.RDO.Tests.Integration.csproj
@@ -68,4 +68,8 @@
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>mkdir "$(ProjectDir)..\..\lib\UnitTests"
+xcopy "$(TargetDir)*" "$(ProjectDir)..\..\lib\UnitTests" /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
