--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -287,10 +287,13 @@
     <Compile Include="Services\JobHistory\JobHistoryServiceTest.cs" />
     <Compile Include="Telemetry\ExportTelemetryMetricProviderTest.cs" />
     <Compile Include="Telemetry\TelemetryMangerTest.cs" />
-    <Compile Include="Validation\FieldMappingsValidatorTest.cs" />
-    <Compile Include="Validation\ProviderConfigurationValidatorTest.cs" />
+    <Compile Include="Validation\NameValidatorTests.cs" />
+    <Compile Include="Validation\RelativityProviderValidator\FieldMappingsValidatorTest.cs" />
+    <Compile Include="Validation\RelativityProviderValidator\RelativityProviderConfigurationValidatorTests.cs" />
+    <Compile Include="Validation\RelativityProviderValidator\SavedSearchValidatorTests.cs" />
     <Compile Include="Validation\SchedulerValidatorTest.cs" />
     <Compile Include="Validation\EmailValidatorTest.cs" />
+    <Compile Include="Validation\RelativityProviderValidator\WorkspaceValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoint.Tests.Core\kCura.IntegrationPoint.Tests.Core.csproj">
