--- a/Source/kCura.IntegrationPoint.Tests.Core/Release/App.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/Release/App.config
@@ -32,7 +32,7 @@
 		<add key="AdditionalFieldNames" value="Email BCC,Email CC,Email From,Email To" />
 		<add key="LongTextFieldName" value="Extracted Text" />
 		<add key="DestinationPath" value="c:\RIP_ExportTest" />
-		<add key="UseLocalRAP" value="false"/>
+		<add key="UseLocalRAP" value="true"/>
 		<add key="LocalRAPFileLocation" value ="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap"/>
 	</appSettings>
 	<kCura.Config>
