--- a/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
+++ b/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
@@ -96,6 +96,18 @@
     <Compile Include="IntegrationPointManager.cs" />
     <Compile Include="IntegrationPointsModule.cs" />
     <Compile Include="JobHistoryManager.cs" />
+    <Compile Include="JobHistory\CompletedJobQueryBuilder.cs" />
+    <Compile Include="JobHistory\DestinationWorkspaceParser.cs" />
+    <Compile Include="JobHistory\ICompletedJobQueryBuilder.cs" />
+    <Compile Include="JobHistory\IDestinationWorkspaceParser.cs" />
+    <Compile Include="JobHistory\IJobHistoryAccess.cs" />
+    <Compile Include="JobHistory\IJobHistoryLibraryFactory.cs" />
+    <Compile Include="JobHistory\IJobHistorySummaryModelBuilder.cs" />
+    <Compile Include="JobHistory\IWorkspaceManager.cs" />
+    <Compile Include="JobHistory\JobHistoryAccess.cs" />
+    <Compile Include="JobHistory\JobHistoryLibraryFactory.cs" />
+    <Compile Include="JobHistory\JobHistorySummaryModelBuilder.cs" />
+    <Compile Include="JobHistory\WorkspaceManager.cs" />
     <Compile Include="KeplerServiceBase.cs" />
     <Compile Include="Repositories\DocumentRepository.cs" />
     <Compile Include="Repositories\IDocumentRepository.cs" />
