--- a/Source/kCura.IntegrationPoints.Agent/kCura.IntegrationPoints.Agent.csproj
+++ b/Source/kCura.IntegrationPoints.Agent/kCura.IntegrationPoints.Agent.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Tasks\SyncManager.cs" />
     <Compile Include="Tasks\SyncWorker.cs" />
     <Compile Include="Tasks\TaskComponentSelector.cs" />
+    <Compile Include="Validation\IntegrationPointProviderValidatorImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
