--- a/Source/kCura.IntegrationPoints.Web/packages.config
+++ b/Source/kCura.IntegrationPoints.Web/packages.config
@@ -28,6 +28,8 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
+  <package id="Moment.js" version="2.17.0" targetFramework="net451" />
+  <package id="Moment.Timezone.js" version="0.5.5" targetFramework="net451" />
   <package id="normalize.css" version="3.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Q" version="1.0.1" targetFramework="net45" />
