--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -286,10 +286,12 @@
     </Compile>
     <Compile Include="Services\IIntegrationPointValidationService.cs" />
     <Compile Include="Validation\Abstract\BasePartsValidator.cs" />
+    <Compile Include="Validation\IntegrationPointProviderValidationMessages.cs" />
     <Compile Include="Validation\Parts\NameValidator.cs" />
+    <Compile Include="Validation\Parts\WorkspaceValidator.cs" />
     <Compile Include="Validation\RelativityProviderValidator\Parts\FolderValidator.cs" />
-    <Compile Include="Validation\RelativityProviderValidator\Parts\SavedSearchValidator.cs" />
-    <Compile Include="Validation\RelativityProviderValidator\Parts\WorkspaceValidator.cs" />
+    <Compile Include="Validation\Parts\SavedSearchValidator.cs" />
+    <Compile Include="Validation\RelativityProviderValidator\Parts\RelativityProviderWorkspaceValidator.cs" />
     <Compile Include="Validation\RelativityProviderValidator\RelativityProviderConfigurationValidator.cs" />
     <Compile Include="Services\CustodianManager\IManagerQueueService.cs" />
     <Compile Include="Services\CustodianService.cs" />
