REL-115552 ECA Pushed to Review widget lists Integration Points of all types
Fix defect - refactor and tests needed

--- a/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
+++ b/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
@@ -97,16 +97,20 @@
     <Compile Include="IntegrationPointsModule.cs" />
     <Compile Include="JobHistoryManager.cs" />
     <Compile Include="JobHistory\CompletedJobQueryBuilder.cs" />
+    <Compile Include="JobHistory\DestinationProviderArtifactIdByGuidQueryBuilder.cs" />
     <Compile Include="JobHistory\DestinationWorkspaceParser.cs" />
     <Compile Include="JobHistory\ICompletedJobQueryBuilder.cs" />
     <Compile Include="JobHistory\IDestinationWorkspaceParser.cs" />
+    <Compile Include="JobHistory\IIntegrationPointByProvidersQueryBuilder.cs" />
     <Compile Include="JobHistory\IJobHistoryAccess.cs" />
-    <Compile Include="JobHistory\IJobHistoryLibraryFactory.cs" />
+    <Compile Include="JobHistory\ILibraryFactory.cs" />
     <Compile Include="JobHistory\IJobHistorySummaryModelBuilder.cs" />
     <Compile Include="JobHistory\IWorkspaceManager.cs" />
     <Compile Include="JobHistory\JobHistoryAccess.cs" />
-    <Compile Include="JobHistory\JobHistoryLibraryFactory.cs" />
+    <Compile Include="JobHistory\LibraryFactory.cs" />
     <Compile Include="JobHistory\JobHistorySummaryModelBuilder.cs" />
+    <Compile Include="JobHistory\IntegrationPointByProvidersQueryBuilder.cs" />
+    <Compile Include="JobHistory\SourceProviderArtifactIdByGuidQueryBuilder.cs" />
     <Compile Include="JobHistory\WorkspaceManager.cs" />
     <Compile Include="KeplerServiceBase.cs" />
     <Compile Include="Repositories\DocumentRepository.cs" />
