--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Services\ViewServiceTests.cs" />
     <Compile Include="SharedLibrary\StoppableExporterTests.cs" />
     <Compile Include="Validation\Parts\ExportFileValidatorTests.cs" />
+    <Compile Include="Validation\Parts\ExportNativeSettingsValidatorTests.cs" />
     <Compile Include="Validation\Parts\FileCountValidatorTests.cs" />
     <Compile Include="Validation\Parts\PaddingValidatorTests.cs" />
     <Compile Include="Validation\ProviderConfigurationValidatorTests.cs" />
