--- a/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
+++ b/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
@@ -92,25 +92,24 @@
     </Compile>
     <Compile Include="DocumentManager.cs" />
     <Compile Include="Helpers\PermissionRepositoryFactory.cs" />
+    <Compile Include="Installers\JobHistoryManagerInstaller.cs" />
     <Compile Include="Installers\ServiceInstaller.cs" />
     <Compile Include="IntegrationPointManager.cs" />
     <Compile Include="IntegrationPointsModule.cs" />
     <Compile Include="JobHistoryManager.cs" />
-    <Compile Include="JobHistory\CompletedJobQueryBuilder.cs" />
-    <Compile Include="JobHistory\DestinationProviderArtifactIdByGuidQueryBuilder.cs" />
+    <Compile Include="JobHistory\CompletedJobsHistoryRepository.cs" />
     <Compile Include="JobHistory\DestinationWorkspaceParser.cs" />
-    <Compile Include="JobHistory\ICompletedJobQueryBuilder.cs" />
+    <Compile Include="JobHistory\ICompletedJobsHistoryRepository.cs" />
     <Compile Include="JobHistory\IDestinationWorkspaceParser.cs" />
-    <Compile Include="JobHistory\IIntegrationPointByProvidersQueryBuilder.cs" />
     <Compile Include="JobHistory\IJobHistoryAccess.cs" />
     <Compile Include="JobHistory\ILibraryFactory.cs" />
     <Compile Include="JobHistory\IJobHistorySummaryModelBuilder.cs" />
+    <Compile Include="JobHistory\IRelativityIntegrationPointsRepository.cs" />
     <Compile Include="JobHistory\IWorkspaceManager.cs" />
     <Compile Include="JobHistory\JobHistoryAccess.cs" />
     <Compile Include="JobHistory\LibraryFactory.cs" />
     <Compile Include="JobHistory\JobHistorySummaryModelBuilder.cs" />
-    <Compile Include="JobHistory\IntegrationPointByProvidersQueryBuilder.cs" />
-    <Compile Include="JobHistory\SourceProviderArtifactIdByGuidQueryBuilder.cs" />
+    <Compile Include="JobHistory\RelativityIntegrationPointsRepository.cs" />
     <Compile Include="JobHistory\WorkspaceManager.cs" />
     <Compile Include="KeplerServiceBase.cs" />
     <Compile Include="Repositories\DocumentRepository.cs" />
