--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -185,6 +185,14 @@
     <Compile Include="Logging\ISystemEventLoggingService.cs" />
     <Compile Include="Migrations\Migration.cs" />
     <Compile Include="Queries\GetSavedSearchQuery.cs" />
+    <Compile Include="QueryBuilders\IDestinationProviderArtifactIdByGuidQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\IIntegrationPointByProvidersQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\IIntegrationPointsCompletedJobsQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\Implementations\DestinationProviderArtifactIdByGuidQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\Implementations\IntegrationPointByProvidersQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\Implementations\IntegrationPointsCompletedJobsQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\Implementations\SourceProviderArtifactIdByGuidQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\ISourceProviderArtifactIdByGuidQueryBuilder.cs" />
     <Compile Include="Repositories\Implementations\SqlWorkspacesRepository.cs" />
     <Compile Include="Repositories\IWorkspacesRepository.cs" />
     <Compile Include="Migrations\AddReplaceWebAPIWithExportCoreSetting.cs" />
