--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Services\ExportInitProcessServiceTests.cs" />
     <Compile Include="Services\ViewServiceTests.cs" />
     <Compile Include="SharedLibrary\StoppableExporterTests.cs" />
+    <Compile Include="Validation\Parts\ArtifactValidatorTests.cs" />
     <Compile Include="Validation\Parts\ExportFileValidatorTests.cs" />
     <Compile Include="Validation\Parts\ExportNativeSettingsValidatorTests.cs" />
     <Compile Include="Validation\Parts\FileCountValidatorTests.cs" />
