REL-105011 added fields map validator

--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Validation\Parts\ArtifactValidatorTests.cs" />
     <Compile Include="Validation\Parts\ExportFileValidatorTests.cs" />
     <Compile Include="Validation\Parts\ExportNativeSettingsValidatorTests.cs" />
+    <Compile Include="Validation\Parts\FieldsMapValidatorTests.cs" />
     <Compile Include="Validation\Parts\FileCountValidatorTests.cs" />
     <Compile Include="Validation\Parts\PaddingValidatorTests.cs" />
     <Compile Include="Validation\Parts\ProductionValidatorTests.cs" />
