--- a/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
+++ b/Source/kCura.IntegrationPoints.Data/kCura.IntegrationPoints.Data.csproj
@@ -185,9 +185,13 @@
     <Compile Include="Logging\ISystemEventLoggingService.cs" />
     <Compile Include="Migrations\Migration.cs" />
     <Compile Include="Queries\GetSavedSearchQuery.cs" />
+    <Compile Include="QueryBuilders\Implementations\AllDestinationProvidersWithNameQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\IAllDestinationProvidersWithNameQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\IAllSourceProvidersWithNameQueryBuilder.cs" />
     <Compile Include="QueryBuilders\IDestinationProviderArtifactIdByGuidQueryBuilder.cs" />
     <Compile Include="QueryBuilders\IIntegrationPointByProvidersQueryBuilder.cs" />
     <Compile Include="QueryBuilders\IIntegrationPointsCompletedJobsQueryBuilder.cs" />
+    <Compile Include="QueryBuilders\Implementations\AllSourceProvidersWithNameQueryBuilder.cs" />
     <Compile Include="QueryBuilders\Implementations\DestinationProviderArtifactIdByGuidQueryBuilder.cs" />
     <Compile Include="QueryBuilders\Implementations\IntegrationPointByProvidersQueryBuilder.cs" />
     <Compile Include="QueryBuilders\Implementations\IntegrationPointsCompletedJobsQueryBuilder.cs" />
