--- a/Source/kCura.IntegrationPoints.Services.Interfaces.Private/kCura.IntegrationPoints.Services.Interfaces.Private.csproj
+++ b/Source/kCura.IntegrationPoints.Services.Interfaces.Private/kCura.IntegrationPoints.Services.Interfaces.Private.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Exceptions\InsufficientPermissionException.cs" />
     <Compile Include="Exceptions\InternalServerErrorException.cs" />
     <Compile Include="Extensions\IntegrationPointExtensions.cs" />
+    <Compile Include="Extensions\ProviderExtensions.cs" />
     <Compile Include="Helpers\IPermissionRepositoryFactory.cs" />
     <Compile Include="IDocumentManager.cs" />
     <Compile Include="IIntegrationPointManager.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Models\PercentagePushedToReviewModel.cs" />
     <Compile Include="Models\JobHistoryModel.cs" />
     <Compile Include="Models\JobHistorySummaryModel.cs" />
+    <Compile Include="Models\ProviderModel.cs" />
     <Compile Include="Requests\UpdateIntegrationPointRequest.cs" />
     <Compile Include="Requests\CreateIntegrationPointRequest.cs" />
     <Compile Include="Requests\HistoricalPromotionStatusRequest.cs" />
