REL-105011 added export settings validation

--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
@@ -192,11 +192,14 @@
     <Compile Include="SharedLibrary\IManagerFactory.cs" />
     <Compile Include="ExportManagers\ExportConvertingExtensions.cs" />
     <Compile Include="Validation\Parts\ArtifactValidator.cs" />
+    <Compile Include="Validation\Parts\DocumentExportSettingsValidator.cs" />
     <Compile Include="Validation\Parts\ExportFileValidator.cs" />
     <Compile Include="Validation\Parts\ExportFileValidatorBase.cs" />
     <Compile Include="Validation\Parts\ExportNativeSettingsValidator.cs" />
+    <Compile Include="Validation\Parts\BaseExportSettingsValidator.cs" />
     <Compile Include="Validation\Parts\FieldsMapValidator.cs" />
     <Compile Include="Validation\Parts\FileCountValidator.cs" />
+    <Compile Include="Validation\Parts\RdoExportSettingsValidator.cs" />
     <Compile Include="Validation\Parts\ViewValidator.cs" />
     <Compile Include="Validation\Parts\PaddingValidator.cs" />
     <Compile Include="SharedLibrary\ServiceManagerProvider.cs" />
