--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests/kCura.IntegrationPoints.FilesDestinationProvider.Core.Tests.csproj
@@ -149,12 +149,14 @@
     <Compile Include="Services\ViewServiceTests.cs" />
     <Compile Include="SharedLibrary\StoppableExporterTests.cs" />
     <Compile Include="Validation\Parts\ArtifactValidatorTests.cs" />
+    <Compile Include="Validation\Parts\DocumentExportSettingsValidatorTests.cs" />
     <Compile Include="Validation\Parts\ExportFileValidatorTests.cs" />
     <Compile Include="Validation\Parts\ExportNativeSettingsValidatorTests.cs" />
     <Compile Include="Validation\Parts\FieldsMapValidatorTests.cs" />
     <Compile Include="Validation\Parts\FileCountValidatorTests.cs" />
     <Compile Include="Validation\Parts\PaddingValidatorTests.cs" />
     <Compile Include="Validation\Parts\ProductionValidatorTests.cs" />
+    <Compile Include="Validation\Parts\RdoExportSettingsValidatorTests.cs" />
     <Compile Include="Validation\Parts\ViewValidatorTests.cs" />
     <Compile Include="Validation\ProviderConfigurationValidatorTests.cs" />
   </ItemGroup>
