REL-114901 Refactor Kepler Services - Add support for all providers
Add IntegrationPointTypeManager:
* GetAllTypes

CREATE and UPDATE IntegrationPoint still needs Integration Tests

--- a/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
+++ b/Source/kCura.IntegrationPoint.Tests.Core/kCura.IntegrationPoint.Tests.Core.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Extensions\GenericPermissionListExtension.cs" />
     <Compile Include="Extensions\JobExtensions.cs" />
     <Compile Include="Extensions\ObjectPermissionListExtension.cs" />
+    <Compile Include="Extensions\RelativityQueryExtensions.cs" />
     <Compile Include="FieldMaps.cs" />
     <Compile Include="Fields.cs" />
     <Compile Include="Folder.cs" />
