--- a/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="KeplerServiceLoggingTests.cs" />
     <Compile Include="KeplerServicePermissionTests.cs" />
     <Compile Include="Repositories\IntegrationPointRepositoryTests.cs" />
+    <Compile Include="Repositories\IntegrationPointTypeRepositoryTests.cs" />
     <Compile Include="Repositories\JobHistoryRepositoryTests.cs" />
     <Compile Include="Repositories\ProviderRepositoryTests.cs" />
   </ItemGroup>
