--- a/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
+++ b/Source/kCura.IntegrationPoints.Services/kCura.IntegrationPoints.Services.csproj
@@ -94,11 +94,13 @@
     <Compile Include="Helpers\PermissionRepositoryFactory.cs" />
     <Compile Include="Installers\DocumentManagerInstaller.cs" />
     <Compile Include="Installers\IInstaller.cs" />
+    <Compile Include="Installers\IntegrationPointTypeManagerInstaller.cs" />
     <Compile Include="Installers\JobHistoryManagerInstaller.cs" />
     <Compile Include="Installers\IntegrationPointManagerInstaller.cs" />
     <Compile Include="Installers\ProviderManagerInstaller.cs" />
     <Compile Include="IntegrationPointManager.cs" />
     <Compile Include="IntegrationPointsModule.cs" />
+    <Compile Include="IntegrationPointTypeManager.cs" />
     <Compile Include="JobHistoryManager.cs" />
     <Compile Include="JobHistory\CompletedJobsHistoryRepository.cs" />
     <Compile Include="JobHistory\DestinationWorkspaceParser.cs" />
@@ -115,15 +117,17 @@
     <Compile Include="JobHistory\RelativityIntegrationPointsRepository.cs" />
     <Compile Include="JobHistory\WorkspaceManager.cs" />
     <Compile Include="KeplerServiceBase.cs" />
-    <Compile Include="Repositories\DocumentRepository.cs" />
+    <Compile Include="Repositories\IIntegrationPointTypeRepository.cs" />
+    <Compile Include="Repositories\Implementations\DocumentRepository.cs" />
     <Compile Include="Repositories\IDocumentRepository.cs" />
     <Compile Include="Repositories\IIntegrationPointRepository.cs" />
     <Compile Include="Repositories\IJobHistoryRepository.cs" />
-    <Compile Include="Repositories\IntegrationPointRepository.cs" />
+    <Compile Include="Repositories\Implementations\IntegrationPointRepository.cs" />
+    <Compile Include="Repositories\Implementations\IntegrationPointTypeRepository.cs" />
     <Compile Include="Repositories\IProviderRepository.cs" />
-    <Compile Include="Repositories\JobHistoryRepository.cs" />
+    <Compile Include="Repositories\Implementations\JobHistoryRepository.cs" />
     <Compile Include="ProviderManager.cs" />
-    <Compile Include="Repositories\ProviderRepository.cs" />
+    <Compile Include="Repositories\Implementations\ProviderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.IntegrationPoints.Services.Interfaces.Private\kCura.IntegrationPoints.Services.Interfaces.Private.csproj">
@@ -131,6 +135,7 @@
       <Name>kCura.IntegrationPoints.Services.Interfaces.Private</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(ProjectDir)..\..\lib"
